src/test/ui/syntax-trait-polarity-feature-gate.rs
use std::marker::Send;

struct TestType;

trait TestTrait {}

impl !Send for TestType {}
//~^ ERROR negative trait bounds

fn main() {}
